--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
           java-version: '17'
 
       - name: Grant execute permission for gradlew
-        run: chmod -x gradlew
+        run: chmod +x gradlew
 
       - name: build with Gradle
         run: ./gradlew clean build
